<resources>
    <string name="app_name">Anaya Fashion</string>
    <string name="save_data">Save Data</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="enter_text_to_save">Enter Text To Save</string>
    <string name="parth_and_pari"><![CDATA[Parth & Pari]]></string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="password">Password</string>
    <string name="loading">Loading</string>
    <string name="something_went_wrong">Something went wrong. Please Try Again Later!</string>
    <string name="forgot_password">Forget password</string>
    <string name="remember_me">Remember me</string>
    <string name="other">Other</string>
    <string name="know_more">Know More</string>
    <string name="wishlist">Wishlist </string>


    <string name="sherwani"> Sherwani</string>
    <string name="Offers" />
    <string name="get_30_off">Get 30% Off</string>
    <string name="lehenga">Lehenga</string>
    <string name="collections">Collections</string>
    <string name="offers">Offers</string>
    <string name="fashion">Fashion</string>
    <string name="anaya">Anaya</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="todo">TODO</string>
    <string name="wishlist_text">Wishlist</string>
    <string name="designer_red_lehanga" />
    <string name="my_cart">My Cart</string>
    <string name="change">Change</string>
    <string name="profile">My Profile</string>
    <string name="back">Back</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="verified">Verified</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="payment_method">Payment Method</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="address">Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="update">Update</string>
    <string name="fetch_location">Fetch location</string>
    <string name="default_web_client_id">1030712514687-ug2dapkq8e5gimmgghm1bhdakfc7shdd.apps.googleusercontent.com</string>
    <string name="Logout">Logout</string>
    <string name="logout">Logout</string>
    <string name="total_0">Total : ₹0</string>
    <string name="Anaya" />
    <string name="ANAYA">ANAYA</string>
    <string name="welcome_to_anaya">Welcome to Anaya</string>
    <string name="discover_your_perfect_look_made_for_you">Discover your perfect look, made for you.</string>
    <string name="plus_91">+91</string>
    <string name="country_code_india">🇮🇳</string>
    <string name="google">Google</string>
    <string name="text_google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="fasbook">Fasbook</string>
    <string name="by_continuing_you_agree_to_our_terms_amp_privacy_policy"><![CDATA[By continuing, you agree to our Terms & Privacy Policy.]]></string>
    <string name="verify_your_number">Verify your number</string>
    <string name="otp_sent_to_91_xxxxxxxx">OTP sent to +91 XXXXXXXX</string>
    <string name="verify_amp_continue"><![CDATA[Verify & Continue]]></string>
    <string name="resend_otp_in_00_28">Resend OTP in 00:28</string>
    <string name="_60_sec">60 sec</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="or">OR</string>
    <string name="anaya_logo">ANAYA</string>
    <string name="fashion_logo">FASHION</string>
    <string name="timeless_elegance_wedding_party_wear">Timeless Elegance • Wedding • Party Wear</string>
</resources>