
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- Top Header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anaya"
                    android:textSize="41sp"
                    android:textStyle="bold"
                    android:textColor="#222"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fashion"
                    android:textSize="50sp"
                    android:layout_marginTop="-1dp"
                    android:textStyle="bold"
                    android:textColor="#F3B63F"/>
            </LinearLayout>

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <!-- Summer Collection -->
        <FrameLayout
            android:id="@+id/lehenga"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="-12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="bottom"
                android:backgroundTint="#F5EADF"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingStart="25dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lehenga"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="#222"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collections"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="#222"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="end|top"
                android:src="@drawable/image_first"
                android:scaleType="fitCenter"
                android:layout_marginEnd="-20dp"
                android:translationY="-0dp"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <!-- Winter Collection -->
        <FrameLayout
            android:id="@+id/sherwani"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="-10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="bottom"
                android:backgroundTint="#F2DDE5"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingStart="28dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sherwani"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="#222"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collections"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="#222"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_gravity="end|top"
                android:src="@drawable/image_sec"
                android:layout_marginEnd="-20dp"
                android:scaleType="fitCenter"
                android:translationY="10dp"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <!-- Offers -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offers"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="#222"
            android:layout_marginTop="10dp"/>

        <!-- Offer Card -->
        <FrameLayout
            android:id="@+id/Offers"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="-10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="bottom"
                android:backgroundTint="#E8ECF8"
                app:cardCornerRadius="35dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:paddingTop="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="50dp"
                            android:layout_height="5dp"
                            android:layout_marginStart="110dp"
                            android:background="#000"
                            android:layout_marginEnd="6dp"/>

                        <View
                            android:layout_width="30dp"
                            android:layout_height="5dp"
                            android:background="#BFC2CC"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_30_off"
                        android:layout_marginStart="70dp"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#222"
                        android:layout_marginTop="20dp"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="200dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="80dp"
                        android:backgroundTint="#000"
                        app:cardCornerRadius="35dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/know_more"
                            android:textColor="#FFF"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:src="@drawable/image_third"
                android:scaleType="fitCenter"
                android:translationX="-40dp"
                android:translationY="10dp"
                tools:ignore="ContentDescription" />
        </FrameLayout>

    </LinearLayout>

</ScrollView>

