<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/anayaLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">


            <RelativeLayout
                android:id="@+id/topHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/logoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:id="@+id/anayaText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anaya"
                        android:textColor="#222"
                        android:textSize="41sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fashionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-1dp"
                        android:text="@string/fashion"
                        android:textColor="#F3B63F"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/logoImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/lehengaFL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/lehengaCard"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#F5EADF"
                    app:cardCornerRadius="35dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:id="@+id/lehengaLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="25dp">

                        <TextView
                            android:id="@+id/lehengaText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lehenga"
                            android:textColor="#222"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lehengaCollectionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/collections"
                            android:textColor="#222"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/lehengaImage"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:layout_gravity="end|top"
                    android:layout_marginEnd="-20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/image_first"
                    tools:ignore="ContentDescription" />

            </FrameLayout>


            <FrameLayout
                android:id="@+id/sherwaniFl"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="-10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/sherwaniCard"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#F2DDE5"
                    app:cardCornerRadius="35dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:id="@+id/sherwaniLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="28dp">

                        <TextView
                            android:id="@+id/sherwaniText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sherwani"
                            android:textColor="#222"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/sherwaniCollectionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/collections"
                            android:textColor="#222"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/sherwaniImage"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_gravity="end|top"
                    android:layout_marginEnd="-20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/image_sec"
                    android:translationY="10dp"
                    tools:ignore="ContentDescription" />

            </FrameLayout>


            <TextView
                android:id="@+id/offersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/offers"
                android:textColor="#222"
                android:textSize="34sp"
                android:textStyle="bold" />


            <FrameLayout
                android:id="@+id/Offers"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="-10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/offerCard"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#E8ECF8"
                    app:cardCornerRadius="35dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:id="@+id/offerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingTop="30dp">

                        <LinearLayout
                            android:id="@+id/lineLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/blackLine"
                                android:layout_width="50dp"
                                android:layout_height="5dp"
                                android:layout_marginStart="110dp"
                                android:layout_marginEnd="6dp"
                                android:background="#000" />

                            <View
                                android:id="@+id/grayLine"
                                android:layout_width="30dp"
                                android:layout_height="5dp"
                                android:background="#BFC2CC" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/offerText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="70dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/get_30_off"
                            android:textColor="#222"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/knowMoreButton"
                            android:layout_width="200dp"
                            android:layout_height="65dp"
                            android:layout_marginStart="80dp"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="#000"
                            app:cardCornerRadius="35dp">

                            <TextView
                                android:id="@+id/knowMoreText"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/know_more"
                                android:textColor="#FFF"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/offerImage"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/image_third"
                    android:translationX="-40dp"
                    android:translationY="17dp"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>